test/log/reduction/vsardotaccq_vv_i32_m1.txt
vsardotaccq_vv_i32_m1.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsardotaccq_vv_i32_m1.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsardotaccq_vv_i32_m1.c:30:6: warning: no previous prototype for 'vsardotaccq_vv_i32_m1_golden' [-Wmissing-prototypes]
   30 | void vsardotaccq_vv_i32_m1_golden(uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
vsardotaccq_vv_i32_m1.c: In function 'vsardotaccq_vv_i32_m1_golden':
vsardotaccq_vv_i32_m1.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vsardotaccq_vv_i32_m1.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vsardotaccq_vv_i32_m1.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vsardotaccq_vv_i32_m1.c: In function 'main':
vsardotaccq_vv_i32_m1.c:37:13: warning: declaration of 'dst_mask' shadows a parameter [-Wshadow]
   37 |     bool8_t dst_mask;
      |             ^~~~~~~~
vsardotaccq_vv_i32_m1.c:30:45: note: shadowed declaration is here
   30 | void vsardotaccq_vv_i32_m1_golden(uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                   ~~~~~~~~~~^~~~~~~~
vsardotaccq_vv_i32_m1.c:38:16: warning: declaration of 'a' shadows a parameter [-Wshadow]
   38 |     int32x16_t a;
      |                ^
vsardotaccq_vv_i32_m1.c:30:63: note: shadowed declaration is here
   30 | void vsardotaccq_vv_i32_m1_golden(uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                                      ~~~~~~~~~^
vsardotaccq_vv_i32_m1.c:39:16: warning: declaration of 'b' shadows a parameter [-Wshadow]
   39 |     int16x32_t b;
      |                ^
vsardotaccq_vv_i32_m1.c:30:74: note: shadowed declaration is here
   30 | void vsardotaccq_vv_i32_m1_golden(uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                                                 ~~~~~~~~~^
vsardotaccq_vv_i32_m1.c:40:16: warning: declaration of 'c' shadows a parameter [-Wshadow]
   40 |     int16x32_t c;
      |                ^
vsardotaccq_vv_i32_m1.c:30:85: note: shadowed declaration is here
   30 | void vsardotaccq_vv_i32_m1_golden(uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                                                            ~~~~~~~~~^
vsardotaccq_vv_i32_m1.c:49:13: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   49 |     int64_t exp_result[8] = {0};
      |             ^~~~~~~~~~
vsardotaccq_vv_i32_m1.c:30:96: note: shadowed declaration is here
   30 | void vsardotaccq_vv_i32_m1_golden(uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                                                                       ~~~~~~~~~^~~~~~~~~~
vsardotaccq_vv_i32_m1.c:51:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   51 |     data_init_bool(dst_mask, exp_dst_mask, 8, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vsardotaccq_vv_i32_m1.c:55:38: error: macro "data_init_scalar" requires 3 arguments, but only 2 given
   55 |     data_init_scalar(accum, exp_accum);
      |                                      ^
vsardotaccq_vv_i32_m1.c:11: note: macro "data_init_scalar" defined here
   11 |  #define data_init_scalar(a, b, threshold) \
      | 
vsardotaccq_vv_i32_m1.c:55:5: error: 'data_init_scalar' undeclared (first use in this function)
   55 |     data_init_scalar(accum, exp_accum);
      |     ^~~~~~~~~~~~~~~~
vsardotaccq_vv_i32_m1.c:55:5: note: each undeclared identifier is reported only once for each function it appears in
vsardotaccq_vv_i32_m1.c:58:65: error: incompatible type for argument 5 of 'vsardotaccq_vv_i32_m1_golden'
   58 |     vsardotaccq_vv_i32_m1_golden(exp_dst_mask,exp_a,exp_b,exp_c,exp_accum,exp_result);
      |                                                                 ^~~~~~~~~
      |                                                                 |
      |                                                                 enum ACCUM
vsardotaccq_vv_i32_m1.c:30:96: note: expected 'int64_t *' {aka 'long long int *'} but argument is of type 'enum ACCUM'
   30 | void vsardotaccq_vv_i32_m1_golden(uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                                                                       ~~~~~~~~~^~~~~~~~~~
vsardotaccq_vv_i32_m1.c:58:5: error: too many arguments to function 'vsardotaccq_vv_i32_m1_golden'
   58 |     vsardotaccq_vv_i32_m1_golden(exp_dst_mask,exp_a,exp_b,exp_c,exp_accum,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
vsardotaccq_vv_i32_m1.c:30:6: note: declared here
   30 | void vsardotaccq_vv_i32_m1_golden(uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
vsardotaccq_vv_i32_m1.c:61:5: note: use '-flax-vector-conversions' to permit conversions between vectors with differing element types or numbers of subparts
   61 |     result = vsardotaccq_vv_i32_m1(dst_mask,a,b,c,accum);
      |     ^~~~~~
vsardotaccq_vv_i32_m1.c:61:45: error: incompatible type for argument 2 of 'vsardotaccq_vv_i32_m1'
   61 |     result = vsardotaccq_vv_i32_m1(dst_mask,a,b,c,accum);
      |                                             ^
      |                                             |
      |                                             int32x16_t
In file included from vsardotaccq_vv_i32_m1.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2141:47: note: expected 'int64x8_t' but argument is of type 'int32x16_t'
 2141 | vsardotaccq_vv_i32_m1 (bool8_t __a, int64x8_t __b, int32x16_t __c, int32x16_t __d, enum ACCUM accum)
      |                                     ~~~~~~~~~~^~~
vsardotaccq_vv_i32_m1.c:61:47: error: incompatible type for argument 3 of 'vsardotaccq_vv_i32_m1'
   61 |     result = vsardotaccq_vv_i32_m1(dst_mask,a,b,c,accum);
      |                                               ^
      |                                               |
      |                                               int16x32_t
In file included from vsardotaccq_vv_i32_m1.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2141:63: note: expected 'int32x16_t' but argument is of type 'int16x32_t'
 2141 | vsardotaccq_vv_i32_m1 (bool8_t __a, int64x8_t __b, int32x16_t __c, int32x16_t __d, enum ACCUM accum)
      |                                                    ~~~~~~~~~~~^~~
vsardotaccq_vv_i32_m1.c:61:49: error: incompatible type for argument 4 of 'vsardotaccq_vv_i32_m1'
   61 |     result = vsardotaccq_vv_i32_m1(dst_mask,a,b,c,accum);
      |                                                 ^
      |                                                 |
      |                                                 int16x32_t
In file included from vsardotaccq_vv_i32_m1.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2141:79: note: expected 'int32x16_t' but argument is of type 'int16x32_t'
 2141 | vsardotaccq_vv_i32_m1 (bool8_t __a, int64x8_t __b, int32x16_t __c, int32x16_t __d, enum ACCUM accum)
      |                                                                    ~~~~~~~~~~~^~~
vsardotaccq_vv_i32_m1.c:66:43: warning: format '%x' expects argument of type 'unsigned int', but argument 3 has type 'long long int' [-Wformat=]
   66 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                          ~^                             ~~~~~~~~~
      |                                           |                                   |
      |                                           unsigned int                        long long int
      |                                          %llx
vsardotaccq_vv_i32_m1.c:66:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int64_t' {aka 'long long int'} [-Wformat=]
   66 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int64_t {aka long long int}
      |                                                               %llx
vsardotaccq_vv_i32_m1.c: In function 'vsardotaccq_vv_i32_m1_golden':
vsardotaccq_vv_i32_m1.c:81:1: error: expected declaration or statement at end of input
   81 | }
      | ^
vsardotaccq_vv_i32_m1.c:30:45: warning: unused parameter 'dst_mask' [-Wunused-parameter]
   30 | void vsardotaccq_vv_i32_m1_golden(uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                   ~~~~~~~~~~^~~~~~~~
vsardotaccq_vv_i32_m1.c:30:63: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vsardotaccq_vv_i32_m1_golden(uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                                      ~~~~~~~~~^
vsardotaccq_vv_i32_m1.c:30:74: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vsardotaccq_vv_i32_m1_golden(uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                                                 ~~~~~~~~~^
vsardotaccq_vv_i32_m1.c:30:85: warning: unused parameter 'c' [-Wunused-parameter]
   30 | void vsardotaccq_vv_i32_m1_golden(uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                                                            ~~~~~~~~~^
vsardotaccq_vv_i32_m1.c:30:96: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vsardotaccq_vv_i32_m1_golden(uint64_t *dst_mask,int32_t *a,int16_t *b,int16_t *c,int64_t *exp_result) {
      |                                                                                       ~~~~~~~~~^~~~~~~~~~
At top level:
vsardotaccq_vv_i32_m1.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsardotaccq_vv_i32_m1.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsardotaccq_vv_i32_m1"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsardotaccq_vv_i32_m1.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsardotaccq_vv_i32_m1.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed